Fixed spacing, map children keys and changed hrefs to Links

--- a/src/containers/countryResultsContainer/countryResultsContainer.scss
+++ b/src/containers/countryResultsContainer/countryResultsContainer.scss
@@ -1,6 +1,5 @@
 .countryResultsContainer {
-  .header {
-    margin-top: 10%;
+  .search-header {
     margin-bottom: 2em;
   }
 
